Enhance README and notebooks for MIMIC-IV Demo data accessibility. Updated README with Colab integration instructions and added a new function in `download_data.py` for downloading MIMIC-IV Demo data directly in Colab. Included download cells in multiple lecture notebooks to facilitate data access for users.

--- a/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
+++ b/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
@@ -74,6 +74,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db6f72da",
+   "metadata": {},
+   "source": [
+    "### Download MIMIC-IV Demo data (if needed)\n",
+    "\n",
+    "**Important for Google Colab users:** If you are running this notebook in Google Colab, you should run the cell below to download the raw MIMIC-IV Demo data. This is needed if you want to explore the raw data or if the instructor asks you to work with it.\n",
+    "\n",
+    "**Local users:** You can skip this cell if you already have the data, or run it if you need to download it.\n",
+    "\n",
+    "> **Note:** This downloads the raw MIMIC-IV Demo data to `data/raw/`. The notebook will use a pre-processed cohort extract from `data/processed/`, but having the raw data available can be useful for exploration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d727d72d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download MIMIC-IV Demo data (Colab-friendly)\n",
+    "# This cell can be skipped if you already have the data or are running locally\n",
+    "\n",
+    "# Add repo root to path to import download function\n",
+    "if str(REPO_ROOT) not in sys.path:\n",
+    "    sys.path.insert(0, str(REPO_ROOT))\n",
+    "\n",
+    "try:\n",
+    "    from data.download_data import download_mimic_demo\n",
+    "    \n",
+    "    # Check if data already exists\n",
+    "    mimic_dir = RAW_DIR / \"mimic-iv-demo-2.2\"\n",
+    "    if mimic_dir.exists() and any(mimic_dir.rglob(\"*.csv.gz\")):\n",
+    "        print(\"✓ MIMIC-IV Demo data already exists. Skipping download.\")\n",
+    "    else:\n",
+    "        print(\"Downloading MIMIC-IV Demo data...\")\n",
+    "        print(\"(This may take a few minutes. The data is ~7 MB compressed.)\")\n",
+    "        download_mimic_demo(out_dir=str(RAW_DIR), method=\"python\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Note: Could not download data: {e}\")\n",
+    "    print(\"You can skip this cell if you already have the processed cohort extract.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b19adff8",
    "metadata": {},
    "source": [
