Colab bootstrap + applied lecture download scaffolding

--- a/lectures/L04_effect_modification/student/L04_effect_modification_student.ipynb
+++ b/lectures/L04_effect_modification/student/L04_effect_modification_student.ipynb
@@ -18,6 +18,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f92373b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab bootstrap (run this first if you opened from a Colab badge)\n",
+    "# - Clones the repo into /content/PHS564 (if needed)\n",
+    "# - Installs requirements\n",
+    "# - Adds repo to sys.path\n",
+    "\n",
+    "from __future__ import annotations\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "import subprocess\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def _in_colab() -> bool:\n",
+    "    return \"google.colab\" in sys.modules\n",
+    "\n",
+    "\n",
+    "if _in_colab():\n",
+    "    REPO_URL = \"https://github.com/vafaei-ar/PHS564.git\"\n",
+    "    TARGET_DIR = Path(\"/content/PHS564\")\n",
+    "\n",
+    "    if not (TARGET_DIR / \"requirements.txt\").exists():\n",
+    "        print(\"Cloning course repo into Colab runtime...\")\n",
+    "        subprocess.run([\"git\", \"clone\", \"--depth\", \"1\", REPO_URL, str(TARGET_DIR)], check=True)\n",
+    "\n",
+    "    os.chdir(TARGET_DIR)\n",
+    "\n",
+    "    print(\"Installing requirements...\")\n",
+    "    subprocess.run([sys.executable, \"-m\", \"pip\", \"-q\", \"install\", \"-r\", \"requirements.txt\"], check=True)\n",
+    "\n",
+    "    if str(TARGET_DIR) not in sys.path:\n",
+    "        sys.path.insert(0, str(TARGET_DIR))\n",
+    "\n",
+    "    print(\"✓ Colab setup complete. Now run the rest of the notebook.\")\n",
+    "else:\n",
+    "    print(\"Not running in Colab; skipping Colab bootstrap.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "17eabbe4",
    "metadata": {},
