--- a/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
+++ b/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
@@ -21,6 +21,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41f1a740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab bootstrap (run this first if you opened from a Colab badge)\n",
+    "# - Clones the repo into /content/PHS564 (if needed)\n",
+    "# - Installs requirements\n",
+    "# - Adds repo to sys.path\n",
+    "\n",
+    "from __future__ import annotations\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "import subprocess\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def _in_colab() -> bool:\n",
+    "    return \"google.colab\" in sys.modules\n",
+    "\n",
+    "\n",
+    "if _in_colab():\n",
+    "    REPO_URL = \"https://github.com/vafaei-ar/PHS564.git\"\n",
+    "    TARGET_DIR = Path(\"/content/PHS564\")\n",
+    "\n",
+    "    if not (TARGET_DIR / \"requirements.txt\").exists():\n",
+    "        print(\"Cloning course repo into Colab runtime...\")\n",
+    "        subprocess.run([\"git\", \"clone\", \"--depth\", \"1\", REPO_URL, str(TARGET_DIR)], check=True)\n",
+    "\n",
+    "    os.chdir(TARGET_DIR)\n",
+    "\n",
+    "    print(\"Installing requirements...\")\n",
+    "    subprocess.run([sys.executable, \"-m\", \"pip\", \"-q\", \"install\", \"-r\", \"requirements.txt\"], check=True)\n",
+    "\n",
+    "    if str(TARGET_DIR) not in sys.path:\n",
+    "        sys.path.insert(0, str(TARGET_DIR))\n",
+    "\n",
+    "    print(\"✓ Colab setup complete. Now run the rest of the notebook.\")\n",
+    "else:\n",
+    "    print(\"Not running in Colab; skipping Colab bootstrap.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ad3a338f",
    "metadata": {},
@@ -76,6 +121,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c902bb4b",
+   "metadata": {},
+   "source": [
+    "### Download MIMIC-IV Demo data (Colab users: run this once)\n",
+    "\n",
+    "If you are running this notebook in **Google Colab**, run the next cell to download the **raw** MIMIC-IV Demo files into `data/raw/`.\n",
+    "\n",
+    "- This is optional for most of this notebook.\n",
+    "- The analysis below uses an **instructor-provided processed cohort extract** in `data/processed/`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fab29309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download raw MIMIC-IV Demo data (safe to re-run)\n",
+    "# NOTE: This downloads raw CSVs to data/raw/. It does NOT create the processed cohort extract.\n",
+    "\n",
+    "try:\n",
+    "    from data.download_data import download_mimic_demo\n",
+    "\n",
+    "    mimic_dir = RAW_DIR / \"mimic-iv-demo-2.2\"\n",
+    "    if mimic_dir.exists() and any(mimic_dir.rglob(\"*.csv.gz\")):\n",
+    "        print(\"✓ Raw MIMIC-IV Demo already present in data/raw/. Skipping download.\")\n",
+    "    else:\n",
+    "        print(\"Downloading raw MIMIC-IV Demo (v2.2) to data/raw/... (few minutes)\")\n",
+    "        download_mimic_demo(out_dir=RAW_DIR, version=\"2.2\", method=\"python\")\n",
+    "except Exception as e:\n",
+    "    print(\"Could not download raw MIMIC-IV Demo in this environment.\")\n",
+    "    print(\"Error:\", e)\n",
+    "    print(\"If you already have the instructor-provided cohort extract in data/processed/, you can continue.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c12ca66",
    "metadata": {},
    "source": [
@@ -124,7 +207,12 @@
    "metadata": {},
    "source": [
     "## Data\n",
-    "Expected file: `data/processed/cohort_L09_gformula.parquet` (or `.csv`).\n"
+    "This lecture uses an **instructor-provided processed cohort extract** derived from MIMIC-IV Demo.\n",
+    "\n",
+    "Expected file: `data/processed/cohort_L09_gformula.parquet` (or `.csv`).\n",
+    "\n",
+    "If this file is missing, ask the instructor for the course data bundle.\n",
+    "(The download cell above only downloads raw MIMIC-IV Demo to `data/raw/`.)\n"
    ]
   },
   {
