Add GitHub Releases downloader for processed cohort extracts

--- a/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
+++ b/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
@@ -122,12 +122,12 @@
    "id": "fe8bb4ef",
    "metadata": {},
    "source": [
-    "### Download MIMIC-IV Demo data (Colab users: run this once)\n",
+    "### Download the processed cohort extract (required)\n",
     "\n",
-    "If you are running this notebook in **Google Colab**, run the next cell to download the **raw** MIMIC-IV Demo files into `data/raw/`.\n",
+    "This lecture uses a **processed cohort extract** hosted as a **GitHub Release asset**.\n",
     "\n",
-    "- This is optional for most of this notebook.\n",
-    "- The analysis below uses an **instructor-provided processed cohort extract** in `data/processed/`."
+    "- If you are running in **Google Colab**, run the next cell once to download the processed cohort into `data/processed/`.\n",
+    "- Downloading raw MIMIC-IV Demo tables is optional and **not required** for this lecture."
    ]
   },
   {
@@ -137,22 +137,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download raw MIMIC-IV Demo data (safe to re-run)\n",
-    "# NOTE: This downloads raw CSVs to data/raw/. It does NOT create the processed cohort extract.\n",
+    "# Download processed cohort extract for L10 (safe to re-run)\n",
+    "# Downloads into data/processed/ from GitHub Releases.\n",
     "\n",
     "try:\n",
-    "    from data.download_data import download_mimic_demo\n",
+    "    from data.download_data import download_course_extracts\n",
     "\n",
-    "    mimic_dir = RAW_DIR / \"mimic-iv-demo-2.2\"\n",
-    "    if mimic_dir.exists() and any(mimic_dir.rglob(\"*.csv.gz\")):\n",
-    "        print(\"✓ Raw MIMIC-IV Demo already present in data/raw/. Skipping download.\")\n",
-    "    else:\n",
-    "        print(\"Downloading raw MIMIC-IV Demo (v2.2) to data/raw/... (few minutes)\")\n",
-    "        download_mimic_demo(out_dir=RAW_DIR, version=\"2.2\", method=\"python\")\n",
+    "    download_course_extracts(\"L10\", out_dir=PROC_DIR)\n",
     "except Exception as e:\n",
-    "    print(\"Could not download raw MIMIC-IV Demo in this environment.\")\n",
+    "    print(\"Could not download the processed cohort extract for L10.\")\n",
     "    print(\"Error:\", e)\n",
-    "    print(\"If you already have the instructor-provided cohort extract in data/processed/, you can continue.\")"
+    "    print(\"If you already have the cohort file, place it in data/processed/ and re-run.\")"
    ]
   },
   {
@@ -160,13 +155,9 @@
    "id": "1a3fc5dc",
    "metadata": {},
    "source": [
-    "### Download MIMIC-IV Demo data (if needed)\n",
+    "### Optional: download raw MIMIC-IV Demo tables\n",
     "\n",
-    "**Important for Google Colab users:** If you are running this notebook in Google Colab, you should run the cell below to download the raw MIMIC-IV Demo data. This is needed if you want to explore the raw data or if the instructor asks you to work with it.\n",
-    "\n",
-    "**Local users:** You can skip this cell if you already have the data, or run it if you need to download it.\n",
-    "\n",
-    "> **Note:** This downloads the raw MIMIC-IV Demo data to `data/raw/`. The notebook will use a pre-processed cohort extract from `data/processed/`, but having the raw data available can be useful for exploration."
+    "Not required for the homework pipeline. Skip unless your instructor asks you to explore the raw Demo tables in `data/raw/`."
    ]
   },
   {
@@ -176,27 +167,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download MIMIC-IV Demo data (Colab-friendly)\n",
-    "# This cell can be skipped if you already have the data or are running locally\n",
-    "\n",
-    "# Add repo root to path to import download function\n",
-    "if str(REPO_ROOT) not in sys.path:\n",
-    "    sys.path.insert(0, str(REPO_ROOT))\n",
+    "# Optional: download raw MIMIC-IV Demo tables to data/raw/\n",
+    "# Not required for the processed-cohort pipeline.\n",
     "\n",
     "try:\n",
     "    from data.download_data import download_mimic_demo\n",
-    "    \n",
-    "    # Check if data already exists\n",
-    "    mimic_dir = RAW_DIR / \"mimic-iv-demo-2.2\"\n",
-    "    if mimic_dir.exists() and any(mimic_dir.rglob(\"*.csv.gz\")):\n",
-    "        print(\"✓ MIMIC-IV Demo data already exists. Skipping download.\")\n",
-    "    else:\n",
-    "        print(\"Downloading MIMIC-IV Demo data...\")\n",
-    "        print(\"(This may take a few minutes. The data is ~7 MB compressed.)\")\n",
-    "        download_mimic_demo(out_dir=str(RAW_DIR), method=\"python\")\n",
+    "\n",
+    "    download_mimic_demo(out_dir=RAW_DIR, version=\"2.2\", method=\"python\")\n",
     "except Exception as e:\n",
-    "    print(f\"Note: Could not download data: {e}\")\n",
-    "    print(\"You can skip this cell if you already have the processed cohort extract.\")"
+    "    print(\"Skipping raw MIMIC-IV Demo download.\")\n",
+    "    print(\"Error:\", e)"
    ]
   },
   {
@@ -205,12 +185,13 @@
    "metadata": {},
    "source": [
     "## Data\n",
-    "This lecture uses an **instructor-provided processed cohort extract** derived from MIMIC-IV Demo.\n",
+    "This lecture uses a **processed cohort extract** derived from MIMIC-IV Demo.\n",
     "\n",
     "Expected file: `data/processed/cohort_L10_survival.parquet` (or `.csv`).\n",
     "\n",
-    "If this file is missing, ask the instructor for the course data bundle.\n",
-    "(The download cell above only downloads raw MIMIC-IV Demo to `data/raw/`.)\n",
+    "If this file is missing:\n",
+    "- In Colab: run the “Download the processed cohort extract” cell above.\n",
+    "- Or locally: run `python data/download_data.py --lecture L10` (downloads into `data/processed/`).\n",
     "\n",
     "Assumed columns (you may adapt to the actual extract):\n",
     "- `A` treatment at baseline\n",
@@ -231,6 +212,7 @@
     "# Statsmodels for regression (logit/ols); installed via requirements.txt\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
+    "\n",
     "parquet_path = PROC_DIR / \"cohort_L10_survival.parquet\"\n",
     "csv_path = PROC_DIR / \"cohort_L10_survival.csv\"\n",
     "\n",
@@ -239,7 +221,11 @@
     "elif csv_path.exists():\n",
     "    df = pd.read_csv(csv_path)\n",
     "else:\n",
-    "    raise FileNotFoundError(\"Missing cohort file for L10. Run `python data/download_data.py`.\")\n",
+    "    raise FileNotFoundError(\n",
+    "        \"Missing cohort file for L10. Download it via:\\n\"\n",
+    "        \"  - Colab: run the download cell above\\n\"\n",
+    "        \"  - Local: python data/download_data.py --lecture L10\\n\"\n",
+    "    )\n",
     "\n",
     "df.head()"
    ]
