Build L08–L11 processed cohorts from raw MIMIC-IV Demo

--- a/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
+++ b/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
@@ -122,12 +122,15 @@
    "id": "f4cda08a",
    "metadata": {},
    "source": [
-    "### Download the processed cohort extract (required)\n",
+    "### Build the processed cohort extract (required)\n",
     "\n",
-    "This lecture uses a **processed cohort extract** hosted as a **GitHub Release asset**.\n",
+    "This lecture expects an analysis-ready cohort file in `data/processed/`.\n",
     "\n",
-    "- If you are running in **Google Colab**, run the next cell once to download the processed cohort into `data/processed/`.\n",
-    "- Downloading raw MIMIC-IV Demo tables is optional and **not required** for this lecture."
+    "If it’s missing, run the next cell to:\n",
+    "1) download MIMIC-IV Demo into `data/raw/` (if needed)\n",
+    "2) build the processed cohort extracts into `data/processed/`\n",
+    "\n",
+    "**Exposure mode (A):** default uses `admission_type` (contains “EMER”). You can switch to `vitals` by changing `EXPOSURE_MODE` in the code cell."
    ]
   },
   {
@@ -137,15 +140,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download processed cohort extract for L08 (safe to re-run)\n",
-    "# Downloads into data/processed/ from GitHub Releases.\n",
+    "# Build processed cohort extracts from raw MIMIC-IV Demo (safe to re-run)\n",
+    "# This will create cohort files under data/processed/.\n",
+    "\n",
+    "EXPOSURE_MODE = \"admission_type\"  # or \"vitals\"\n",
+    "HR_THRESHOLD = 100.0  # used only if EXPOSURE_MODE == \"vitals\"\n",
     "\n",
     "try:\n",
-    "    from data.download_data import download_course_extracts\n",
+    "    from data.download_data import download_mimic_demo\n",
+    "    from data.build_processed_extracts_demo import build_processed_extracts\n",
     "\n",
-    "    download_course_extracts(\"L08\", out_dir=PROC_DIR)\n",
+    "    mimic_dir = RAW_DIR / \"mimic-iv-demo-2.2\"\n",
+    "    if not mimic_dir.exists():\n",
+    "        print(\"Downloading raw MIMIC-IV Demo (v2.2) to data/raw/ ...\")\n",
+    "        download_mimic_demo(out_dir=RAW_DIR, version=\"2.2\", method=\"python\")\n",
+    "    else:\n",
+    "        print(\"✓ Raw MIMIC-IV Demo already present.\")\n",
+    "\n",
+    "    out_paths = build_processed_extracts(exposure_mode=EXPOSURE_MODE, hr_threshold=HR_THRESHOLD)\n",
+    "    print(\"✓ Built processed cohorts:\")\n",
+    "    for k, v in out_paths.items():\n",
+    "        print(f\"  {k}: {v}\")\n",
     "except Exception as e:\n",
-    "    print(\"Could not download the processed cohort extract for L08.\")\n",
+    "    print(\"Could not build processed cohort extracts in this environment.\")\n",
     "    print(\"Error:\", e)\n",
     "    print(\"If you already have the cohort file, place it in data/processed/ and re-run.\")"
    ]
@@ -191,8 +208,8 @@
     "- `data/processed/cohort_L08_ps_ipw.parquet` (preferred) or `.csv`\n",
     "\n",
     "If this file is missing:\n",
-    "- In Colab: run the “Download the processed cohort extract” cell above.\n",
-    "- Or locally: run `python data/download_data.py --lecture L08` (downloads into `data/processed/`).\n"
+    "- Run the “Build the processed cohort extract” cell above, or\n",
+    "- Run locally: `python data/build_processed_extracts_demo.py --exposure-mode admission_type`"
    ]
   },
   {
@@ -218,9 +235,9 @@
     "    raise FileNotFoundError(\n",
     "        \"Cohort file not found. Expected one of:\\n\"\n",
     "        f\" - {parquet_path}\\n - {csv_path}\\n\"\n",
-    "        \"Download it via:\\n\"\n",
-    "        \"  - Colab: run the download cell above\\n\"\n",
-    "        \"  - Local: python data/download_data.py --lecture L08\\n\"\n",
+    "        \"Build it via:\\n\"\n",
+    "        \"  - Colab: run the build cell above\\n\"\n",
+    "        \"  - Local: python data/build_processed_extracts_demo.py --exposure-mode admission_type\\n\"\n",
     "    )\n",
     "\n",
     "df.head()"
