--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -124,12 +124,15 @@
    "id": "485aac1e",
    "metadata": {},
    "source": [
-    "### Download the processed cohort extract (required)\n",
+    "### Build the processed cohort extract (required)\n",
     "\n",
-    "This lecture uses a **processed cohort extract** hosted as a **GitHub Release asset**.\n",
+    "This lecture expects an analysis-ready cohort file in `data/processed/`.\n",
     "\n",
-    "- If you are running in **Google Colab**, run the next cell once to download the processed cohort into `data/processed/`.\n",
-    "- Downloading raw MIMIC-IV Demo tables is optional and **not required** for this lecture."
+    "If it’s missing, run the next cell to:\n",
+    "1) download MIMIC-IV Demo into `data/raw/` (if needed)\n",
+    "2) build the processed cohort extracts into `data/processed/`\n",
+    "\n",
+    "**Exposure mode:** the cohort builder uses a simple teaching definition of time-varying treatment derived from vitals. You may change thresholds in the code cell."
    ]
   },
   {
@@ -139,15 +142,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download processed cohort extract for L11 (safe to re-run)\n",
-    "# Downloads into data/processed/ from GitHub Releases.\n",
+    "# Build processed cohort extracts from raw MIMIC-IV Demo (safe to re-run)\n",
+    "# This will create cohort files under data/processed/.\n",
+    "\n",
+    "HR_THRESHOLD = 100.0  # defines A_t = 1 if mean daily HR > threshold\n",
+    "T_MAX = 7            # number of ICU days to include (teaching simplification)\n",
     "\n",
     "try:\n",
-    "    from data.download_data import download_course_extracts\n",
+    "    from data.download_data import download_mimic_demo\n",
+    "    from data.build_processed_extracts_demo import build_processed_extracts\n",
     "\n",
-    "    download_course_extracts(\"L11\", out_dir=PROC_DIR)\n",
+    "    mimic_dir = RAW_DIR / \"mimic-iv-demo-2.2\"\n",
+    "    if not mimic_dir.exists():\n",
+    "        print(\"Downloading raw MIMIC-IV Demo (v2.2) to data/raw/ ...\")\n",
+    "        download_mimic_demo(out_dir=RAW_DIR, version=\"2.2\", method=\"python\")\n",
+    "    else:\n",
+    "        print(\"✓ Raw MIMIC-IV Demo already present.\")\n",
+    "\n",
+    "    out_paths = build_processed_extracts(hr_threshold=HR_THRESHOLD, t_max=T_MAX)\n",
+    "    print(\"✓ Built processed cohorts:\")\n",
+    "    for k, v in out_paths.items():\n",
+    "        print(f\"  {k}: {v}\")\n",
     "except Exception as e:\n",
-    "    print(\"Could not download the processed cohort extract for L11.\")\n",
+    "    print(\"Could not build processed cohort extracts in this environment.\")\n",
     "    print(\"Error:\", e)\n",
     "    print(\"If you already have the cohort file, place it in data/processed/ and re-run.\")"
    ]
@@ -192,14 +209,14 @@
     "Expected file: `data/processed/cohort_L11_msm_longitudinal.parquet` (or `.csv`).\n",
     "\n",
     "If this file is missing:\n",
-    "- In Colab: run the “Download the processed cohort extract” cell above.\n",
-    "- Or locally: run `python data/download_data.py --lecture L11` (downloads into `data/processed/`).\n",
+    "- Run the “Build the processed cohort extract” cell above, or\n",
+    "- Run locally: `python data/build_processed_extracts_demo.py --exposure-mode admission_type`\n",
     "\n",
     "Assumed **long** format with columns like:\n",
-    "- `id`, `t`\n",
+    "- `stay_id`, `t_day`\n",
     "- treatment `A_t`\n",
-    "- time-varying confounders `L_t` (may be multiple)\n",
-    "- outcome `Y` at end (or `Y_t`)\n",
+    "- time-varying covariates like `hr_mean`\n",
+    "- outcome `Y` at end\n",
     "\n",
     "This notebook is **diagnostics-first**: you will compute stabilized weights using a provided scaffold, then **diagnose** and **interpret** the MSM estimate.\n"
    ]
@@ -224,9 +241,9 @@
     "    df = pd.read_csv(csv_path)\n",
     "else:\n",
     "    raise FileNotFoundError(\n",
-    "        \"Missing cohort file for L11. Download it via:\\n\"\n",
-    "        \"  - Colab: run the download cell above\\n\"\n",
-    "        \"  - Local: python data/download_data.py --lecture L11\\n\"\n",
+    "        \"Missing cohort file for L11. Build it via:\\n\"\n",
+    "        \"  - Colab: run the build cell above\\n\"\n",
+    "        \"  - Local: python data/build_processed_extracts_demo.py --exposure-mode admission_type\\n\"\n",
     "    )\n",
     "\n",
     "df.head()"
