Align L08–L11 notebooks with built cohort columns

--- a/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
+++ b/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
@@ -250,11 +250,12 @@
    "source": [
     "### Choose variables\n",
     "We will define:\n",
-    "- Treatment/exposure `A`\n",
-    "- Outcome `Y`\n",
+    "- Treatment/exposure `A` (already in the cohort)\n",
+    "- Outcome `Y` (already in the cohort)\n",
     "- Baseline covariates/confounders `L_list`\n",
     "\n",
-    "**Instructor should pre-specify** these for the cohort (see slides). Students should only edit the covariate list and model formulas.\n"
+    "For this teaching cohort, you can use `age`, `sex` and ICU length of stay `los`.\n",
+    "To keep modeling simple, we will create `sex_male` as a 0/1 indicator."
    ]
   },
   {
@@ -264,13 +265,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: set these to match the cohort\n",
-    "A = \"A\"   # treatment column name\n",
-    "Y = \"Y\"   # outcome column name (binary or continuous)\n",
-    "L_list = [\"age\", \"sex\"]  # TODO: extend with confounders available in df\n",
+    "# Variables (match the built cohort)\n",
+    "A = \"A\"   # treatment column\n",
+    "Y = \"Y\"   # outcome (0/1): in-hospital death\n",
+    "\n",
+    "# Create simple numeric covariates for modeling\n",
+    "if \"sex_male\" not in df.columns:\n",
+    "    df[\"sex_male\"] = (df[\"sex\"].astype(str).str.upper() == \"M\").astype(int)\n",
+    "\n",
+    "# Baseline covariates/confounders\n",
+    "L_list = [\"age\", \"sex_male\", \"los\"]\n",
     "\n",
     "# Quick sanity checks\n",
-    "missing = [c for c in [A,Y,*L_list] if c not in df.columns]\n",
+    "missing = [c for c in [A, Y, *L_list] if c not in df.columns]\n",
     "missing"
    ]
   },
