--- a/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
+++ b/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
@@ -256,9 +256,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = \"A\"   # TODO\n",
-    "Y = \"Y\"   # TODO\n",
-    "L_list = [\"age\", \"sex\"]  # TODO\n",
+    "# Variables (match the built cohort)\n",
+    "A = \"A\"   # treatment column\n",
+    "Y = \"Y\"   # outcome (0/1): in-hospital death\n",
+    "\n",
+    "# Create simple numeric covariates for modeling\n",
+    "if \"sex_male\" not in df.columns:\n",
+    "    df[\"sex_male\"] = (df[\"sex\"].astype(str).str.upper() == \"M\").astype(int)\n",
+    "\n",
+    "# Baseline covariates/confounders\n",
+    "L_list = [\"age\", \"sex_male\", \"los\"]\n",
     "\n",
     "analysis_vars = [A, Y] + L_list\n",
     "d = df[analysis_vars].dropna().copy()\n",
