--- a/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
+++ b/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
@@ -264,11 +264,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Expected: either already long with columns ['id','t','A','E_t', ...]\n",
-    "# or wide with ['id','T','E', ...]\n",
-    "# TODO: adapt based on df columns.\n",
+    "# Our built cohort is *wide* with columns:\n",
+    "#   hadm_id, A, E (event), T (follow-up time in days), age, sex, ...\n",
+    "# We will expand it into a simple person-day dataset with:\n",
+    "#   t = 1..T, and E_t = 1 at the event time if E==1.\n",
     "\n",
-    "long = df.copy()  # placeholder\n",
+    "if \"sex_male\" not in df.columns:\n",
+    "    df[\"sex_male\"] = (df[\"sex\"].astype(str).str.upper() == \"M\").astype(int)\n",
+    "\n",
+    "records = []\n",
+    "for _, r in df[[\"hadm_id\", \"A\", \"E\", \"T\", \"age\", \"sex_male\"]].dropna().iterrows():\n",
+    "    T = int(r[\"T\"])\n",
+    "    E = int(r[\"E\"])\n",
+    "    for t in range(1, T + 1):\n",
+    "        E_t = 1 if (E == 1 and t == T) else 0\n",
+    "        records.append(\n",
+    "            {\n",
+    "                \"hadm_id\": int(r[\"hadm_id\"]),\n",
+    "                \"t\": t,\n",
+    "                \"A\": int(r[\"A\"]),\n",
+    "                \"E_t\": E_t,\n",
+    "                \"age\": float(r[\"age\"]),\n",
+    "                \"sex_male\": int(r[\"sex_male\"]),\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "long = pd.DataFrame.from_records(records)\n",
     "long.head()"
    ]
   },
@@ -288,11 +309,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: set outcome and covariates\n",
-    "# Recommended structure:\n",
-    "#   hazard_formula = \"E_t ~ A + age + sex + C(t)\"  (with t as categorical or spline)\n",
-    "hazard_formula = \"E_t ~ A + t\"  # TODO\n",
-    "# Fit model\n",
+    "# Outcome and covariates (match the person-day dataset we created)\n",
+    "# We include time as categorical (C(t)) to allow a flexible baseline hazard.\n",
+    "hazard_formula = \"E_t ~ A + C(t) + age + sex_male\"\n",
+    "\n",
     "haz_model = smf.logit(hazard_formula, data=long).fit(disp=False)\n",
     "haz_model.params.head()"
    ]
