--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -264,14 +264,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID = \"id\"\n",
-    "T = \"t\"\n",
-    "A = \"A_t\"  # TODO: rename if needed\n",
+    "# Columns in the built cohort (see data/build_processed_extracts_demo.py)\n",
+    "ID = \"stay_id\"\n",
+    "T = \"t_day\"\n",
+    "A = \"A_t\"  # time-varying treatment\n",
     "Y = \"Y\"    # end-of-follow-up outcome column\n",
-    "L_t = [\"L_t\"]  # TODO: list time-varying confounders\n",
-    "L0 = [\"age\",\"sex\"]  # TODO: baseline covariates\n",
     "\n",
-    "cols_needed = [ID,T,A,Y] + L0 + L_t\n",
+    "# Create a simple numeric baseline covariate for modeling\n",
+    "if \"sex_male\" not in df.columns:\n",
+    "    df[\"sex_male\"] = (df[\"sex\"].astype(str).str.upper() == \"M\").astype(int)\n",
+    "\n",
+    "# Time-varying covariates available in the extract\n",
+    "L_t = [\"hr_mean\"]\n",
+    "\n",
+    "# Baseline covariates\n",
+    "L0 = [\"age\", \"sex_male\"]\n",
+    "\n",
+    "cols_needed = [ID, T, A, Y] + L0 + L_t\n",
     "missing = [c for c in cols_needed if c not in df.columns]\n",
     "missing"
    ]
