Clarify cohort column meanings in L08–L11 notebooks

--- a/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
+++ b/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
@@ -214,6 +214,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aab046cb",
+   "metadata": {},
+   "source": [
+    "### Column definitions (this cohort)\n",
+    "\n",
+    "These are defined by the cohort builder (`data/build_processed_extracts_demo.py`):\n",
+    "\n",
+    "- `A` (treatment):\n",
+    "  - `EXPOSURE_MODE = \"admission_type\"` (default): `A = 1` if `admission_type` contains `\"EMER\"` (e.g., \"EW EMER.\", \"DIRECT EMER.\")\n",
+    "  - `EXPOSURE_MODE = \"vitals\"` (optional): `A = 1` if mean heart rate in the **first 6 hours** of the ICU stay is `> HR_THRESHOLD`\n",
+    "- `Y` (outcome): `Y = 1` if the patient **died in-hospital** (`hospital_expire_flag`)\n",
+    "- `A_label`: human-readable description of the `A` definition\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2d7e3e5b",
