--- a/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
+++ b/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
@@ -220,6 +220,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d186c296",
+   "metadata": {},
+   "source": [
+    "### Column definitions (this cohort)\n",
+    "\n",
+    "These are defined by the cohort builder (`data/build_processed_extracts_demo.py`):\n",
+    "\n",
+    "- `A` (baseline treatment): `A = 1` if `admission_type` contains `\"EMER\"` (e.g., \"EW EMER.\", \"DIRECT EMER.\")\n",
+    "- `E` (event): `E = 1` if the patient **died in-hospital** (`hospital_expire_flag`)\n",
+    "- `T` (follow-up time, days): `T = ceil(dischtime - admittime)` with administrative truncation at **28 days**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1533e646",
