--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -222,6 +222,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7528394d",
+   "metadata": {},
+   "source": [
+    "### Column definitions (this cohort)\n",
+    "\n",
+    "These are defined by the cohort builder (`data/build_processed_extracts_demo.py`):\n",
+    "\n",
+    "- **Unit + time index**: one row per ICU stay-day\n",
+    "  - `stay_id`: ICU stay identifier\n",
+    "  - `t_day`: day since ICU intime (0, 1, 2, ...)\n",
+    "- **Time-varying covariate**:\n",
+    "  - `hr_mean`: mean heart rate during that ICU day (from `chartevents`)\n",
+    "- **Time-varying treatment**:\n",
+    "  - `A_t = 1` if `hr_mean > HR_THRESHOLD` (a pedagogical stand-in for a time-varying intervention rule)\n",
+    "- **Outcome**:\n",
+    "  - `Y = 1` if the patient **died in-hospital** (`hospital_expire_flag`)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fe929572",
