Audit fixes: remove legacy tree, clarify Colab setup, align data scripts

--- a/lectures/L01_counterfactuals_definition/student/L01_counterfactuals_definition_student.ipynb
+++ b/lectures/L01_counterfactuals_definition/student/L01_counterfactuals_definition_student.ipynb
@@ -65,7 +65,17 @@
       "metadata": {},
       "source": [
         "### Setup\n",
-        "This notebook uses only: `numpy`, `pandas`, `matplotlib`.\n"
+        "\n",
+        "This notebook is designed to run **locally** or in **Google Colab**.\n",
+        "\n",
+        "It uses only: `numpy`, `pandas`, `matplotlib`.\n",
+        "\n",
+        "**If you opened from the Colab badge (recommended):**\n",
+        "1) Run the first code cell titled **“Colab bootstrap”** (it clones the repo + installs requirements)\n",
+        "2) Run the notebook top-to-bottom.\n",
+        "\n",
+        "**If you are running locally:**\n",
+        "- Install dependencies from `requirements.txt` (see the repo `README.md`), then run top-to-bottom.\n"
       ]
     },
     {
