--- a/lectures/L05_dags_dseparation/student/L05_dags_dseparation_student.ipynb
+++ b/lectures/L05_dags_dseparation/student/L05_dags_dseparation_student.ipynb
@@ -16,7 +16,11 @@
     "- Translate “adjustment set” logic into an analysis plan.\n",
     "\n",
     "### Required reading\n",
-    "- Hernán & Robins, Chapter 6 (DAGs). https://miguelhernan.org/whatifbook\n"
+    "- Hernán & Robins, Chapter 6 (DAGs). https://miguelhernan.org/whatifbook\n",
+    "\n",
+    "**Rules for this notebook**\n",
+    "- Only edit cells marked **TODO**.\n",
+    "- Do not change the overall structure/cell order.\n"
    ]
   },
   {
@@ -73,13 +77,12 @@
     "\n",
     "This notebook is designed to run **locally** or in **Google Colab**.\n",
     "\n",
-    "**Colab workflow (recommended):**\n",
-    "1) Clone the course repo (ask the instructor for the GitHub URL).\n",
-    "2) Install requirements.\n",
-    "3) Run the notebook top-to-bottom.\n",
+    "**If you opened from the Colab badge (recommended):**\n",
+    "1) Run the first code cell titled **“Colab bootstrap”** (it clones the repo + installs requirements)\n",
+    "2) Run the notebook top-to-bottom.\n",
     "\n",
-    "> If you opened this notebook directly from GitHub in Colab (without cloning),\n",
-    "> relative paths will not work. Clone first.\n"
+    "**If you are running locally:**\n",
+    "- Install dependencies from `requirements.txt` (see the repo `README.md`), then run top-to-bottom.\n"
    ]
   },
   {
