--- a/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
+++ b/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
@@ -17,7 +17,11 @@
     "- Bootstrap the full procedure for uncertainty.\n",
     "\n",
     "### Required reading\n",
-    "- Hernán & Robins, g-formula/standardization sections (aligned chapter in *What If*).\n"
+    "- Hernán & Robins, g-formula/standardization sections (aligned chapter in *What If*).\n",
+    "\n",
+    "**Rules for this notebook**\n",
+    "- Only edit cells marked **TODO**.\n",
+    "- Do not change the overall structure/cell order.\n"
    ]
   },
   {
@@ -74,13 +78,12 @@
     "\n",
     "This notebook is designed to run **locally** or in **Google Colab**.\n",
     "\n",
-    "**Colab workflow (recommended):**\n",
-    "1) Clone the course repo (ask the instructor for the GitHub URL).\n",
-    "2) Install requirements.\n",
-    "3) Run the notebook top-to-bottom.\n",
+    "**If you opened from the Colab badge (recommended):**\n",
+    "1) Run the first code cell titled **“Colab bootstrap”** (it clones the repo + installs requirements)\n",
+    "2) Run the notebook top-to-bottom.\n",
     "\n",
-    "> If you opened this notebook directly from GitHub in Colab (without cloning),\n",
-    "> relative paths will not work. Clone first.\n"
+    "**If you are running locally:**\n",
+    "- Install dependencies from `requirements.txt` (see the repo `README.md`), then run top-to-bottom.\n"
    ]
   },
   {
