--- a/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
+++ b/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
@@ -15,7 +15,11 @@
     "- Produce causal survival curves under a point treatment (and interpret assumptions).\n",
     "\n",
     "### Required reading\n",
-    "- Hernán & Robins, sections on censoring and survival (target trial chapters/sections as applicable).\n"
+    "- Hernán & Robins, sections on censoring and survival (target trial chapters/sections as applicable).\n",
+    "\n",
+    "**Rules for this notebook**\n",
+    "- Only edit cells marked **TODO**.\n",
+    "- Do not change the overall structure/cell order.\n"
    ]
   },
   {
@@ -72,13 +76,12 @@
     "\n",
     "This notebook is designed to run **locally** or in **Google Colab**.\n",
     "\n",
-    "**Colab workflow (recommended):**\n",
-    "1) Clone the course repo (ask the instructor for the GitHub URL).\n",
-    "2) Install requirements.\n",
-    "3) Run the notebook top-to-bottom.\n",
+    "**If you opened from the Colab badge (recommended):**\n",
+    "1) Run the first code cell titled **“Colab bootstrap”** (it clones the repo + installs requirements)\n",
+    "2) Run the notebook top-to-bottom.\n",
     "\n",
-    "> If you opened this notebook directly from GitHub in Colab (without cloning),\n",
-    "> relative paths will not work. Clone first.\n"
+    "**If you are running locally:**\n",
+    "- Install dependencies from `requirements.txt` (see the repo `README.md`), then run top-to-bottom.\n"
    ]
   },
   {
