--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -13,11 +13,15 @@
     "- Construct stabilized weights over time:\n",
     "- treatment weights \\(W_A\\)\n",
     "- censoring weights \\(W_C\\)\n",
-    "- combined weights \\(W=W_A\times W_C\\)\n",
+    "- combined weights \\(W=W_A\\times W_C\\)\n",
     "- Fit a simple MSM (weighted pooled logistic/GLM) and interpret the parameter as a **marginal causal effect** under assumptions.\n",
     "\n",
     "### Required reading\n",
-    "- Hernán & Robins, MSM sections (typically Chapter 12 continuation / longitudinal chapters).\n"
+    "- Hernán & Robins, MSM sections (typically Chapter 12 continuation / longitudinal chapters).\n",
+    "\n",
+    "**Rules for this notebook**\n",
+    "- Only edit cells marked **TODO**.\n",
+    "- Do not change the overall structure/cell order.\n"
    ]
   },
   {
@@ -74,13 +78,12 @@
     "\n",
     "This notebook is designed to run **locally** or in **Google Colab**.\n",
     "\n",
-    "**Colab workflow (recommended):**\n",
-    "1) Clone the course repo (ask the instructor for the GitHub URL).\n",
-    "2) Install requirements.\n",
-    "3) Run the notebook top-to-bottom.\n",
+    "**If you opened from the Colab badge (recommended):**\n",
+    "1) Run the first code cell titled **“Colab bootstrap”** (it clones the repo + installs requirements)\n",
+    "2) Run the notebook top-to-bottom.\n",
     "\n",
-    "> If you opened this notebook directly from GitHub in Colab (without cloning),\n",
-    "> relative paths will not work. Clone first.\n"
+    "**If you are running locally:**\n",
+    "- Install dependencies from `requirements.txt` (see the repo `README.md`), then run top-to-bottom.\n"
    ]
   },
   {
