Streamline L08–L11 data guidance

--- a/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
+++ b/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
@@ -189,8 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: download raw MIMIC-IV Demo tables to data/raw/\n",
-    "# Not required for the processed-cohort pipeline.\n",
+    "# Optional: explore raw tables (safe to skip)\n",
+    "# The cohort-build cell above already downloads what you need for this lecture.\n",
     "\n",
     "try:\n",
     "    from data.download_data import download_mimic_demo\n",
