--- a/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
+++ b/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
@@ -187,8 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: download raw MIMIC-IV Demo tables to data/raw/\n",
-    "# Not required for the processed-cohort pipeline.\n",
+    "# Optional: explore raw tables (safe to skip)\n",
+    "# The cohort-build cell above already downloads what you need for this lecture.\n",
     "\n",
     "try:\n",
     "    from data.download_data import download_mimic_demo\n",
@@ -234,6 +234,18 @@
     "- `A` (baseline treatment): `A = 1` if `admission_type` contains `\"EMER\"` (e.g., \"EW EMER.\", \"DIRECT EMER.\")\n",
     "- `E` (event): `E = 1` if the patient **died in-hospital** (`hospital_expire_flag`)\n",
     "- `T` (follow-up time, days): `T = ceil(dischtime - admittime)` with administrative truncation at **28 days**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ec8261",
+   "metadata": {},
+   "source": [
+    "### Before you load the cohort (important)\n",
+    "\n",
+    "If you **do not** already have `data/processed/cohort_L10_survival.parquet` (or `.csv`):\n",
+    "- In Colab: run the cell titled **“Build the processed cohort extract (required)”** above, then come back here.\n",
+    "- Locally: run `python data/build_processed_extracts_demo.py --exposure-mode admission_type`.\n"
    ]
   },
   {
