--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -189,8 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: download raw MIMIC-IV Demo tables to data/raw/\n",
-    "# Not required for the processed-cohort pipeline.\n",
+    "# Optional: explore raw tables (safe to skip)\n",
+    "# The cohort-build cell above already downloads what you need for this lecture.\n",
     "\n",
     "try:\n",
     "    from data.download_data import download_mimic_demo\n",
@@ -242,6 +242,18 @@
     "  - `A_t = 1` if `hr_mean > HR_THRESHOLD` (a pedagogical stand-in for a time-varying intervention rule)\n",
     "- **Outcome**:\n",
     "  - `Y = 1` if the patient **died in-hospital** (`hospital_expire_flag`)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "568bd8e1",
+   "metadata": {},
+   "source": [
+    "### Before you load the cohort (important)\n",
+    "\n",
+    "If you **do not** already have `data/processed/cohort_L11_msm_longitudinal.parquet` (or `.csv`):\n",
+    "- In Colab: run the cell titled **“Build the processed cohort extract (required)”** above, then come back here.\n",
+    "- Locally: run `python data/build_processed_extracts_demo.py --hr-threshold 100 --t-max 7`.\n"
    ]
   },
   {
