Clarify applied lectures cohort-build instructions

--- a/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
+++ b/lectures/L08_ipw_propensity/student/L08_ipw_propensity_student.ipynb
@@ -232,6 +232,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1af62e2d",
+   "metadata": {},
+   "source": [
+    "### Before you load the cohort (important)\n",
+    "\n",
+    "If you **do not** already have `data/processed/cohort_L08_ps_ipw.parquet` (or `.csv`):\n",
+    "- In Colab: run the cell titled **“Build the processed cohort extract (required)”** above, then come back here.\n",
+    "- Locally: run `python data/build_processed_extracts_demo.py --exposure-mode admission_type`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed3bcd0c",
