--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -278,7 +278,7 @@
     "    raise FileNotFoundError(\n",
     "        \"Missing cohort file for L11. Build it via:\\n\"\n",
     "        \"  - Colab: run the build cell above\\n\"\n",
-    "        \"  - Local: python data/build_processed_extracts_demo.py --exposure-mode admission_type\\n\"\n",
+    "        \"  - Local: python data/build_processed_extracts_demo.py --hr-threshold 100 --t-max 7\\n\"\n",
     "    )\n",
     "\n",
     "df.head()"
