--- a/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
+++ b/lectures/L09_gformula_standardization/student/L09_gformula_standardization_student.ipynb
@@ -233,6 +233,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c266bdb6",
+   "metadata": {},
+   "source": [
+    "### Before you load the cohort (important)\n",
+    "\n",
+    "If you **do not** already have `data/processed/cohort_L09_gformula.parquet` (or `.csv`):\n",
+    "- In Colab: run the cell titled **“Build the processed cohort extract (required)”** above, then come back here.\n",
+    "- Locally: run `python data/build_processed_extracts_demo.py --exposure-mode admission_type`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2d7e3e5b",
